==> Yeshasvitvs/MCP2515_CAN_Nordic_nRF52_SPI/src/mcp2515_can.cpp <==
#define DEBUG_EN 0
#include "mcp2515_can.h"
#include "nrf_delay.h"
#include "SEGGER_RTT.h"

byte mcp2515_can::mcp2515_init(const byte canSpeed, const byte clock) {

    byte res;

    mcp2515_reset();

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if (res > 0) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter setting mode fail"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }
    
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("Enter setting mode success "));
    #else
    nrf_delay_ms(10);
    #endif

    // set boadrate
    if (mcp2515_configRate(canSpeed, clock)) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("set rate fall!!"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("set rate success!!"));
    #else
    nrf_delay_ms(10);
    #endif

    if (res == MCP2515_OK) {

        // init canbuffers
        mcp2515_initCANBuffers();

        // interrupt mode
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);

        #if (DEBUG_RXANY==1)
        // enable both receive-buffers to receive any message and enable rollover
        mcp2515_modifyRegister(MCP_RXB0CTRL,
                               MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
                               MCP_RXB_RX_ANY | MCP_RXB_BUKT_MASK);
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
                               MCP_RXB_RX_ANY);
        #else
        // enable both receive-buffers to receive messages with std. and ext. identifiers and enable rollover
        mcp2515_modifyRegister(MCP_RXB0CTRL,
                               MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
                               MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK);
        mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK,
                               MCP_RXB_RX_STDEXT);
        #endif
        // enter normal mode
        res = setMode(MODE_NORMAL);
        if (res) {
            #if DEBUG_EN
            SERIAL_PORT_MONITOR.println(F("Enter Normal Mode Fail!!"));
            #else
            nrf_delay_ms(10);
            #endif
            return res;
        }


        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter Normal Mode Success!!"));
        #else
        nrf_delay_ms(10);
        #endif

    }
    return res;
    
}

byte mcp2515_can::init_Mask(byte num, byte ext, unsigned long ulData) {
    byte res = MCP2515_OK;
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("Begin to set Mask!!"));
    #else
    nrf_delay_ms(10);
    #endif
    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if (res > 0) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter setting mode fall"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }

    if (num == 0) {
        mcp2515_write_id(MCP_RXM0SIDH, ext, ulData);

    } else if (num == 1) {
        mcp2515_write_id(MCP_RXM1SIDH, ext, ulData);
    } else {
        res =  MCP2515_FAIL;
    }

    res = mcp2515_setCANCTRL_Mode(mcpMode);
    if (res > 0) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter normal mode fall"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("set Mask success!!"));
    #else
    nrf_delay_ms(10);
    #endif
    return res;
}

byte mcp2515_can::init_Filt(byte num, byte ext, unsigned long ulData) {
    byte res = MCP2515_OK;
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("Begin to set Filter!!"));
    #else
    nrf_delay_ms(10);
    #endif
    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if (res > 0) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter setting mode fall"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }

    switch (num) {
        case 0:
            mcp2515_write_id(MCP_RXF0SIDH, ext, ulData);
            break;

        case 1:
            mcp2515_write_id(MCP_RXF1SIDH, ext, ulData);
            break;

        case 2:
            mcp2515_write_id(MCP_RXF2SIDH, ext, ulData);
            break;

        case 3:
            mcp2515_write_id(MCP_RXF3SIDH, ext, ulData);
            break;

        case 4:
            mcp2515_write_id(MCP_RXF4SIDH, ext, ulData);
            break;

        case 5:
            mcp2515_write_id(MCP_RXF5SIDH, ext, ulData);
            break;

        default:
            res = MCP2515_FAIL;
    }

    res = mcp2515_setCANCTRL_Mode(mcpMode);
    if (res > 0) {
        #if DEBUG_EN
        SERIAL_PORT_MONITOR.println(F("Enter normal mode fall\r\nSet filter fail!!"));
        #else
        nrf_delay_ms(10);
        #endif
        return res;
    }
    #if DEBUG_EN
    SERIAL_PORT_MONITOR.println(F("set Filter success!!"));
    #else
    nrf_delay_ms(10);
    #endif

    return res;
}

byte mcp2515_can::sendMsg(unsigned long id, byte ext, byte rtrBit, byte len, const byte* buf, bool wait_sent) {
    byte res, res1, txbuf_n;
    uint16_t uiTimeOut = 0;

    can_id = id;
    ext_flg = ext;
    rtr = rtrBit;

    do {
        if (uiTimeOut > 0) {
            nrf_delay_us(10);
        }
        res = mcp2515_getNextFreeTXBuf(&txbuf_n);                       // info = addr.
        uiTimeOut++;
    } while (res == MCP_ALLTXBUSY && (uiTimeOut < TIMEOUTVALUE));

    if (uiTimeOut == TIMEOUTVALUE) {
        return CAN_GETTXBFTIMEOUT;                                      // get tx buff time out
    }
    mcp2515_write_canMsg(txbuf_n, id, ext, rtrBit, len, buf);

    if (wait_sent) {
        uiTimeOut = 0;
        do {
            if (uiTimeOut > 0) {
                nrf_delay_us(10);
            }
            uiTimeOut++;
            res1 = mcp2515_readRegister(txbuf_n - 1);  // read send buff ctrl reg
            res1 = res1 & 0x08;
        } while (res1 && (uiTimeOut < TIMEOUTVALUE));

        if (uiTimeOut == TIMEOUTVALUE) {                                     // send msg timeout
            return CAN_SENDMSGTIMEOUT;
        }
    }

    return CAN_OK;

}

bool mcp2515_can::mcpPinMode(const byte pin, const byte mode) {
    byte res;
    bool ret = true;

    switch (pin) {
        case MCP_RX0BF:
            switch (mode) {
                case MCP_PIN_HIZ:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B0BFE, 0);
                    break;
                case MCP_PIN_INT:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B0BFM | B0BFE, B0BFM | B0BFE);
                    break;
                case MCP_PIN_OUT:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B0BFM | B0BFE, B0BFE);
                    break;
                default:
                    #if DEBUG_EN
                    SERIAL_PORT_MONITOR.println(F("Invalid pin mode request"));
                    #endif
                    return false;
            }
            return true;
            break;
        case MCP_RX1BF:
            switch (mode) {
                case MCP_PIN_HIZ:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B1BFE, 0);
                    break;
                case MCP_PIN_INT:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B1BFM | B1BFE, B1BFM | B1BFE);
                    break;
                case MCP_PIN_OUT:
                    mcp2515_modifyRegister(MCP_BFPCTRL, B1BFM | B1BFE, B1BFE);
                    break;
                default:
                    #if DEBUG_EN
                    SERIAL_PORT_MONITOR.println(F("Invalid pin mode request"));
                    #endif
                    return false;
            }
            return true;
            break;
        case MCP_TX0RTS:
            res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
            if (res > 0) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("Entering Configuration Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            switch (mode) {
                case MCP_PIN_INT:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B0RTSM, B0RTSM);
                    break;
                case MCP_PIN_IN:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B0RTSM, 0);
                    break;
                default:
                    #if DEBUG_EN
                    SERIAL_PORT_MONITOR.println(F("Invalid pin mode request"));
                    #endif
                    ret = false;
            }
            res = mcp2515_setCANCTRL_Mode(mcpMode);
            if (res) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("`Setting ID Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            return ret;
            break;
        case MCP_TX1RTS:
            res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
            if (res > 0) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("Entering Configuration Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            switch (mode) {
                case MCP_PIN_INT:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B1RTSM, B1RTSM);
                    break;
                case MCP_PIN_IN:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B1RTSM, 0);
                    break;
                default:
                    #if DEBUG_EN
                    SERIAL_PORT_MONITOR.println(F("Invalid pin mode request"));
                    #endif
                    ret = false;
            }
            res = mcp2515_setCANCTRL_Mode(mcpMode);
            if (res) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("`Setting ID Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            return ret;
            break;
        case MCP_TX2RTS:
            res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
            if (res > 0) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("Entering Configuration Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            switch (mode) {
                case MCP_PIN_INT:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B2RTSM, B2RTSM);
                    break;
                case MCP_PIN_IN:
                    mcp2515_modifyRegister(MCP_TXRTSCTRL, B2RTSM, 0);
                    break;
                default:
                    #if DEBUG_EN
                    SERIAL_PORT_MONITOR.println(F("Invalid pin mode request"));
                    #endif
                    ret = false;
            }
            res = mcp2515_setCANCTRL_Mode(mcpMode);
            if (res) {
                #if DEBUG_EN
                SERIAL_PORT_MONITOR.println(F("`Setting ID Mode Failure..."));
                #else
                nrf_delay_ms(10);
                #endif
                return false;
            }
            return ret;
            break;
        default:
            #if DEBUG_EN
            SERIAL_PORT_MONITOR.println(F("Invalid pin for mode request"));
            #endif
            return false;
    }
}
